Fixed Spacing

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 320px) {
   .footer {
     margin-top: 48px;
+    margin-bottom: 36px;
   }
   .footer__paragraph {
     font-size: 0.875em;
